--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 <body>
     <main>
         <section id="Celular">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                seu navegador não suporta iframes
+            </iframe>
         </section>
-        <section id="redes-ociais">
-
+        <section id="redes-sociais">
+            <a href="" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
+            <a href="" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
         </section>
     </main>
 </body>
